styles/home.sass
$card-shadow: 0px 15px 25px #e2e3e4

body
  background-color: #F6F7FD
  #scroll-to-top
    display: none
    float: right
    z-index: 1
    position: fixed
    width: 50px
    right: 1em
    bottom: 2em
    &:hover
      cursor: pointer
      transform: scale(1.1)
  .container
    width: 100%
    text-align: center
    .search-form
      padding: 20px
      .input-group.mb-3
        box-shadow: 0px 20px 40px rgba(54, 72, 82, 0.15)
        background: #eaebee
        width: 50%
        input#search
          height: 50px
          border: 0px
          border-radius: 10px 0px 0px 10px
        .input-group-append
          background-color: red
          border-radius: 0px 10px 10px 0px
          button
            color: white
            border: 0px


    .titles
      font-family: 'Poppins', sans-serif
      text-align: left
      font-weight: bolder
      font-size: 2em

    .header
      display: flex
      justify-content: space-between
      padding: 10px
      .home_buttons
        width: 80px
        display: flex
        justify-content: space-between
        align-items: center
        @media (min-width: 768px)
          width: 80px
        @media (min-width: 1200px)
          width: 80px
        button
          padding: 0
          border: none
          background: none
        img
          width: 30px
  #my-categories-list
    display: flex
    flex-direction: row
    flex-wrap: wrap
    justify-content: space-start
    @media (min-width: 768px)
      margin-left: .5em
    .my-categories
      width: 45%
      margin: 1%
      text-align: center
      box-shadow: $card-shadow
      border-radius: 15px
      background-color: #fff
      &:hover
        cursor: pointer
      @media (min-width: 768px)
        width: 30%
      @media (min-width: 992px)
        width: 28%
      @media (min-width: 1200px)
        width: 23%
      img
        width: 50%
        padding-top: 40px
        padding-bottom: 20px
        border-radius: 15px 15px 0px 0px
  .card
    width: 100%
    margin: 0.5em
    padding: 1em
    box-shadow: $card-shadow
    border-radius: 15px
    @media (min-width: 768px)
      width: 46%
    @media (min-width: 992px)
      width: 47%
    @media (min-width: 1200px)
      width: 31%
    .card-header
      display: flex
      justify-content: space-between
      align-items: center
      background-color: #fff
      border-top: 0px solid #f3f3f3
      border-bottom: 1px solid #f3f3f3
      .card-title
        margin: 0
      img
        width: 25px
      .btn
        padding: 0 6px
        height: 25px
    .card-footer
      background-color: #fff
      border-top: 1px solid #f3f3f3
      .footer-top
        display: flex
        flex-direction: row
        flex-wrap: wrap
        justify-content: space-between
        .left-footer
          width: 35%
          display: flex
          flex-direction: row
          flex-wrap: wrap
          justify-content: space-between
          img
            width: 20px
            &:hover
              cursor: pointer
        i
          &:hover
            cursor: pointer
    .comment-section
      display: none
      .post-comment
        display: flex
        justify-content: space-around
        margin: 20px 0px
        textarea
          border: none
          border-bottom: 2px solid #585858
          width: 90%
          overflow: auto
          // margin: 10px 0px
          // resize: none
          outline: none
          height: 2.5em
        input
          // background-color: #ffffff
          // border: none
      .comments-list
        max-height: 200px
        overflow: auto
        .list
          padding: 0
          list-style: none
          div
            text-align: left
            display: table-cell
            img
              width: 30px
              margin-right: 10px
              border-radius: 50%
            p
              margin: 0
            .timestamp
              color: grey



  #search-all-resources
    display: flex
    justify-content: space-between
    margin: 1em
    input
      border-radius: 5px
      max-width: 500px

